<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2e"
    tools:context=".MainActivity">

    <!-- Heading -->
    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <!-- Divider Line-->
    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        android:background="#c0c0c0" />

    <!-- new cases last 24hr-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="2dp"
        app:cardBackgroundColor="#f5b342"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/newCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="35dp"
            android:text="@string/newCasesDE"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <!-- table row with the other two cards-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="200dp">

        <!-- first card just for Berlin-->
        <androidx.cardview.widget.CardView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            app:cardBackgroundColor="#f5b342"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/incidenceBE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="3dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="45dp"
                android:text="@string/incidenceBerlin"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <!-- second one for whole of Germany-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            app:cardBackgroundColor="#f5b342"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/incidenceDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="3dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="45dp"
                android:text="@string/incidenceGermany"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </TableRow>

</androidx.coordinatorlayout.widget.CoordinatorLayout>